[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/antibodie.png" type="Texture" id=1]
[ext_resource path="res://Juego/antibodie_right.png" type="Texture" id=2]
[ext_resource path="res://antibody.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.8182

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("antibody:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 60.0, 90.0, 120.0, 150.0, 180.0, 210.0, 240.0, 270.0, 300.0, 330.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("antibodyCollision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 60.0, 90.0, 120.0, 150.0, 180.0, 210.0, 240.0, 270.0, 300.0, 330.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_up"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("antibody:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.023, 0.023 ), Vector2( 0.045, 0.045 ), Vector2( 0.09, 0.09 ), Vector2( 0.18, 0.18 ), Vector2( 0.23, 0.23 ) ]
}

[node name="antibody2D" type="Area2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="antibody" type="AnimatedSprite" parent="."]
position = Vector2( 300.838, 340.859 )
rotation = 2.0944
scale = Vector2( 0.228059, 0.228059 )
frames = SubResource( 1 )
playing = true

[node name="antibodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 300.404, 339.496 )
rotation = 2.0944
shape = SubResource( 2 )

[node name="antibodyAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/rotate = SubResource( 3 )
anims/show_up = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="body_entered"]
